projects-section-description endpoints were added
