# docs/swagger.yaml
@@ -12,6 +12,12 @@ definitions:
         example: some title
         type: string
     type: object
+  model.CreateProjSectDescSwagger:
+    properties:
+      description:
+        example: some description
+        type: string
+    type: object
   model.CreateProjectSwagger:
     properties:
       age_category:
@@ -151,6 +157,15 @@ definitions:
         type: string
       title:
         example: some title
+        type: string
+    type: object
+  model.UpdateProjSectDescSwagger:
+    properties:
+      description:
+        example: some description
+        type: string
+      id:
+        example: ""
         type: string
     type: object
   model.UpdateUserSwagger:
@@ -565,6 +580,111 @@ paths:
       summary: Get project by id.
       tags:
       - project
+  /projects-section-description:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: ProjSectDesc
+        in: body
+        name: ProjSectDesc
+        required: true
+        schema:
+          $ref: '#/definitions/model.CreateProjSectDescSwagger'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/model.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.Response'
+        "408":
+          description: Request Timeout
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: Create projects section description.
+      tags:
+      - projects section description
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: ProjSectDesc
+        in: body
+        name: ProjSectDesc
+        required: true
+        schema:
+          $ref: '#/definitions/model.UpdateProjSectDescSwagger'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/model.Response'
+        "408":
+          description: Request Timeout
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: Update projects section description by id.
+      tags:
+      - projects section description
+  /projects-section-description/{id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/model.Response'
+        "408":
+          description: Request Timeout
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: Get projects section description by id.
+      tags:
+      - projects section description
   /user:
     get:
       consumes:
