# internal/api/server.go
@@ -84,6 +84,10 @@ func (s Server) initRoutes(app *fiber.App, cfg config.Server) {
 	app.Get("/hero/:id", timeout.NewWithContext(handler.GetHeroByIDHandler(s.Service, s.Log), cfg.AppWriteTimeout))
 	app.Put("/hero", timeout.NewWithContext(handler.UpdateHeroByIDHandler(s.Service, s.Log), cfg.AppWriteTimeout))
 	app.Delete("/hero/:id", timeout.NewWithContext(handler.DeleteHeroByIDHandler(s.Service, s.Log), cfg.AppWriteTimeout))
+
+	app.Post("/projects-section-description", timeout.NewWithContext(handler.CreateProjSectDescHandler(s.Service, s.Log), cfg.AppWriteTimeout))
+	app.Get("/projects-section-description/:id", timeout.NewWithContext(handler.GetProjSectDescByIDHandler(s.Service, s.Log), cfg.AppWriteTimeout))
+	app.Put("/projects-section-description", timeout.NewWithContext(handler.UpdateProjSectDescByIDHandler(s.Service, s.Log), cfg.AppWriteTimeout))
 }
 
 func corsConfig() cors.Config {
